Adding corrections to reports

--- a/aber/IY_report/report.tex
+++ b/aber/IY_report/report.tex
@@ -556,7 +556,7 @@ current progress of development of the indirect framework. This report
 gives an overview of the entire framework as of release 3.1 including a
 description of the theory behind the routines and detailed description
 of how each one works. Suggested ideas for future development are also
-listed. 
+listed.
 
 The second report {[}20{]} was a basic user manual for the routines still under
 development for the VESUVIO spectrometer and provides a description of
@@ -579,9 +579,8 @@ course.
 
 One of the first things that I learned when I started the placement was
 how to read other peoples code and how to mentally navigate a large code
-base. While these things may seem trivial to the established developer I
-found that they were essential skills that could only be gained by
-exposure to a large project with multiple developers.
+base. While these skills may seem trivial to the established developer I
+found that they only be gained by exposure to a large project with multiple developers.
 
 When I started the placement I had only taken a single module in C++ and
 I was self taught to the beginner level in Python. After a year of being
@@ -685,7 +684,7 @@ documentation of why the routine was useful and what it does
 also began to write unit tests and system tests for any new routines.
 While the code base was still no where near the level of quality I would
 expect by the time I left, I did feel that these measures were slowly
-starting to make an impact on the quality of the code. This taught me that unit tests give a developer confidence to make changes and how to refactor properly. 
+starting to make an impact on the quality of the code. This taught me that unit tests give a developer confidence to make changes and how to refactor properly.
 
 Finally, one further negative issue I had to deal with on several
 occasions was a lack of direction and the conflict of interest between
@@ -704,6 +703,8 @@ retired scientist who's profession was QENs data analysis along with
 guests from both the development team and the scientific group. This
 allowed us to better outline what our goals should both in the short an
 long term, as well as increasing communication between all parties.
+
+All of these issues really outlined to me the importance of good communication within a development team. While these issues were not so horrendous as to prevent the team from delivering the software, I really felt that even the smallest amount of miscommunication can lead to bad engineering and long delays.
 
 In summary, I feel that I had an excellent placement a ISIS. I was given
 responsibilities above and beyond anything I had imagined before
